--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.product</groupId>
 	<artifactId>pms</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>pms</name>
 	<description>Product management service which will act as store management tool</description>
 
@@ -20,7 +20,18 @@
 
 	<properties>
 		<java.version>17</java.version>
+		<swagger-annotations.version>1.6.3</swagger-annotations.version>
 	</properties>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-annotations</artifactId>
+				<version>${swagger-annotations.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<plugins>
