--- a/pms-api/pom.xml
+++ b/pms-api/pom.xml
@@ -53,6 +53,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
 	</dependencies>
 	
 		<build>
