--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<version>0.0.1</version>
 	<name>pms</name>
 	<description>Product management service which will act as store management tool</description>
+	<packaging>pom</packaging>
 
 	<modules>
 		<module>pms-api</module>
