--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<swagger-annotations.version>1.6.3</swagger-annotations.version>
+		<org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -30,6 +31,11 @@
 				<groupId>io.swagger</groupId>
 				<artifactId>swagger-annotations</artifactId>
 				<version>${swagger-annotations.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.mapstruct</groupId>
+				<artifactId>mapstruct</artifactId>
+				<version>${org.mapstruct.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
